kubernetes/gateway/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.60.0.2"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.homelab0.xyz"
      allowedRoutes:
        namespaces:
          from: All
